# zapp

./: README.md  db.sqlite3  pyproject.toml
userapp/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py
userapp/migrations/: 0001_initial.py  0002_product_seller_purchase_product_seller.py  0003_alter_user_phone_number.py  0004_alter_seller_phone_number.py
userproject/: settings.py  urls.py
